testfx/errors/error_tests/err_15_unclosed_brace.fx
// 测试15: 代码块错误 - 未匹配的大括号
if (true) {
    println("test")
// 缺少闭合 }
